--- a/01_nota0-10.html
+++ b/01_nota0-10.html
@@ -6,10 +6,11 @@
     */
 
     //Entrada
-
-
+    let nota = Number(prompt("Insira um nota entre 0 e 10"));
     //Processamento
-
+    while (nota < 0 || nota > 10) {
+        nota = Number(prompt("Insira um nota entre 0 e 10"));
+    }
 
     //Saída
 
