--- a/03_validarDados.html
+++ b/03_validarDados.html
@@ -11,8 +11,23 @@
     */
 
     //Entrada
-
-
+    let nome = prompt("Qual é o seu nome?").toLowerCase();
+    while (nome.length < 3 ) {
+        nome = prompt("Qual é o seu nome?").toLowerCase();
+    }
+    let idade = Number(prompt("Qual a sua idade"));
+    while (idade < 0 || idade > 150) {
+        idade = Number(prompt("Qual a sua idade"));
+    }
+    let salario = Number(prompt("Qual o seu salario?"));
+    while (salario <= 0) {
+        salario = Number(prompt("Qual o seu salario?"));
+    }
+    let sexo = prompt("Qual é o seu sexo?(M / F)").toLowerCase();
+    while (sexo != "f" && sexo != "m") {
+        
+    }
+    let estadocivil = prompt("Qual é o seu estado civil?").toLowerCase();
     //Processamento
 
 
